--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>All Challenges</title>
-</head>
-    <body>
+{% extends "base.html" %}
+
+{% block page_titel %}All Challenges{% endblock %}
+{% block content %}
         <h1>every month's Challenge</h1>
         {% for month in months %}
             <li><a href="{% url "month-challenges" month %}">{{month|title}}</a></li>
         {% endfor %}
-    </body>
-</html>
+{% endblock %}
